--- a/project/.env
+++ b/project/.env
@@ -9,19 +9,15 @@
 # Real environment variables win over .env files.
 #
 # DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
+# https://symfony.com/doc/current/configuration/secrets.html
 #
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=88110033d71c6adc846605c95ef3ca45
+APP_SECRET=8b1357534c2632b936c69bf9eaf97e5b
 ###< symfony/framework-bundle ###
-
-###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
-MAILER_DSN=smtp://maildev_docker_symfony:25
-###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
@@ -32,3 +28,14 @@ MAILER_DSN=smtp://maildev_docker_symfony:25
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 DATABASE_URL=mysql://root:@db_docker_symfony:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
