--- a/project/.env
+++ b/project/.env
@@ -26,7 +26,7 @@ APP_SECRET=8b1357534c2632b936c69bf9eaf97e5b
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
-DATABASE_URL=mysql://root:@db_docker_symfony:3306/db_name?serverVersion=5.7
+DATABASE_URL="mysql://root:@db_docker_symfony:3306/db_name"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
