disautomatize database init

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -23,7 +23,7 @@ COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 # Set the entrypoint script
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+# ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 # Run Apache in the foreground
 CMD ["apache2-foreground"]
