add working directory phpstan.yml

--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -22,6 +22,8 @@ jobs:
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
+      working-directory: project
 
     - name: Run PHPStan
       run: composer phpstan
+      working-directory: project
