--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,6 @@
 parameters:
     level: 4
     paths:
-        - project/src
+        - src
     bootstrapFiles:
         - %rootDir%/../../project/vendor/autoload.php
