--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -20,5 +20,5 @@ jobs:
           php-version: 8.2
 
       - name: Run PHPStan
-        run: php ../project/vendor/bin/phpstan analyse --configuration=../project/phpstan.neon
+        run: php vendor/bin/phpstan analyse --configuration=../phpstan.neon
         working-directory: project
