--- a/github/workflow/ci.yml
+++ b/github/workflow/ci.yml
@@ -27,31 +27,26 @@ jobs:
           php-version: 8.2
 
       - name: Setup composer
-        working-directory: ./api
+        working-directory: ./project
         run: |
-          cp .env.example .env
           composer install --ignore-platform-req=php
 
       - name: Setup DATABASE_URL in .env
-        working-directory: ./api
-        run: echo "DATABASE_URL=mysql://root:root@127.0.0.1:3306/db_resrel?serverVersion=5.7&charset=utf8mb4" >> .env
+        working-directory: ./transverse
+        run: echo "DATABASE_URL=mysql://root:root@127.0.0.1:3306/db_docker_symfony?serverVersion=5.7&charset=utf8mb4" >> .env
 
       - name: Setup DB
-        working-directory: ./api
+        working-directory: ./project
         run: |
-          mysql -h 127.0.0.1 -u root -proot -e "DROP DATABASE IF EXISTS db_resrel_test"
-          mysql -h 127.0.0.1 -u root -proot -e "CREATE DATABASE db_resrel_test"
+          mysql -h 127.0.0.1 -u root -proot -e "DROP DATABASE IF EXISTS db_transverse_test"
+          mysql -h 127.0.0.1 -u root -proot -e "CREATE DATABASE db_transverse_test"
 
       - name: Load fixtures
-        working-directory: ./api
+        working-directory: ./project
         run: |
           php bin/console d:m:m --no-interaction --env=test
           php bin/console d:f:l --no-interaction --env=test
 
-      - name: Generate JWT keys
-        working-directory: ./api
-        run: php bin/console lexik:jwt:generate-keypair
-
       - name: Run tests
-        working-directory: ./api
+        working-directory: ./project
         run: php bin/phpunit
