--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           php-version: 8.2
 
+      - name: test
+        run: pwd && ls
+
       - name: Run PHPStan
         run: php ./project/vendor/bin/phpstan analyse --configuration=phpstan.neon
         # working-directory: project
