--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           php-version: 8.2
 
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest
+        working-directory: project
+
       - name: test
         run: pwd && ls
 
