fix path autoload 2

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,6 @@ parameters:
     paths:
         - src
     bootstrapFiles:
-        - %rootDir%/../autoload.php
+        - %rootDir%/../../autoload.php
     parallel:
         maximumNumberOfProcesses: 1
