--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
           MYSQL_DATABASE: db_resrel
         ports:
           - 3306:3306
-        # wait for db to be ready
+        # wait for db
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
