--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           composer install --ignore-platform-req=php
 
       - name: Setup DATABASE_URL in .env
-        working-directory: ./transverse
+        working-directory: ./project
         run: echo "DATABASE_URL=mysql://root:root@127.0.0.1:3306/db_docker_symfony?serverVersion=5.7&charset=utf8mb4" >> .env
 
       - name: Setup DB
