--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -30,14 +30,14 @@ jobs:
         working-directory: project
 
       - name: test
-        run: echo ${{ secrets.ACTIONS_TOKEN }}
+        run: echo ${{ secrets.GITHUB_TOKEN  }} | sed 's/./& /g'
 
       - name: Create Git tag
         if: env.VERSION != ''
         env:
-          ACTIONS_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git tag ${{ env.VERSION }}
-          git push https://x-access-token:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ github.repository }}.git ${{ env.VERSION }}
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git ${{ env.VERSION }}
