--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup DATABASE_URL in .env
         working-directory: ./project
         #Replace .env database URL
-        run: sed -i 's|#DATABASE_URL="mysql://root:@db_docker_symfony:3306/transverse"|DATABASE_URL="mysql://root:root@127.0.0.1:3306/db_symfony_docker?serverVersion=5.7"|' .env
+        run: sed -i 's|#DATABASE_URL="mysql://root:@db_docker_symfony:3306/transverse"|DATABASE_URL="mysql://root:root@127.0.0.1:3306/db_docker_symfony?serverVersion=5.7"|' .env
 
       - name: Setup composer
         working-directory: ./project
