--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup DATABASE_URL in .env
         working-directory: ./project
         #Replace .env database URL
-        run: sed -i 's|#DATABASE_URL="mysql://root:@db_docker_symfony:3306/transverse"|DATABASE_URL="mysql://root:root@127.0.0.1:3306/db_docker_symfony?serverVersion=5.7"|' .env
+        run: sed -i 's|#DATABASE_URL="mysql://root:@db_docker_symfony:3306/transverse"|DATABASE_URL="mysql://root:root@127.0.0.1:3306/db_symfony_docker?serverVersion=5.7"|' .env
 
       - name: Setup composer
         working-directory: ./project
@@ -39,8 +39,8 @@ jobs:
       - name: Setup DB
         working-directory: ./project
         run: |
-          mysql -h 127.0.0.1 -u root -proot -e "DROP DATABASE IF EXISTS db_docker_symfony"
-          mysql -h 127.0.0.1 -u root -proot -e "CREATE DATABASE db_docker_symfony"
+          mysql -h 127.0.0.1 -u root -proot -e "DROP DATABASE IF EXISTS db_symfony_docker_test"
+          mysql -h 127.0.0.1 -u root -proot -e "CREATE DATABASE db_symfony_docker_test"
 
       - name: Verify DB creation
         working-directory: ./project
